# Netease-Songs-Url-Fetcher-For-CF-WKS

./: Cargo.toml  README.md  wrangler.toml
src/: lib.rs
